# trace-weft

./: CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Justfile  LICENSE  README.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: ci.yml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: .env.production  .prettierignore  eslint.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/scripts/: generate-api-types.mjs
apps/web/src/: ApiKeyField.tsx  App.tsx  EvalDashboard.tsx  HitlDashboard.tsx  IconRegistry.ts  IconSystem.tsx  JsonView.tsx  MemoryDiff.tsx  ReplayLab.tsx  TokenHeatmap.tsx  TraceDetail.tsx  TraceDiff.tsx  TraceGraph.tsx  TraceList.test.tsx  TraceList.tsx  api.ts  auth.ts  index.css  main.tsx  spanColors.ts  vite-env.d.ts
apps/web/tests/: smoke.spec.ts
crates/trace-weft/: Cargo.toml
crates/trace-weft-cli/: Cargo.toml
crates/trace-weft-cli/src/: main.rs
crates/trace-weft-core/: Cargo.toml
crates/trace-weft-core/src/: lib.rs  redactor.rs  test_util.rs
crates/trace-weft-ingest/: Cargo.toml
crates/trace-weft-ingest/src/: lib.rs
crates/trace-weft-macros/: Cargo.toml
crates/trace-weft-macros/src/: lib.rs
crates/trace-weft-mcp/: Cargo.toml
crates/trace-weft-mcp/src/: lib.rs
crates/trace-weft-openinference/: Cargo.toml
crates/trace-weft-openinference/src/: lib.rs
crates/trace-weft-otel/: Cargo.toml
crates/trace-weft-otel/src/: lib.rs
crates/trace-weft-recorder/: Cargo.toml
crates/trace-weft-recorder/migrations/: 20240518000000_initial_schema.sql  20240519000000_events.sql  20240520000000_project_id.sql
crates/trace-weft-recorder/src/: lib.rs  sqlite.rs
crates/trace-weft-recorder/tests/: local_recording.rs
crates/trace-weft-server/: Cargo.toml
crates/trace-weft-server/openapi/: trace-weft.openapi.json
crates/trace-weft-server/src/: auth.rs  lib.rs
crates/trace-weft-server/src/storage/: analytics.rs  blob.rs  mod.rs  postgres.rs
crates/trace-weft-server/tests/: api_e2e.rs  postgres_e2e.rs
crates/trace-weft/src/: builder.rs  capture.rs  context.rs  eval.rs  events.rs  hitl.rs  lib.rs  replay.rs
crates/trace-weft/tests/: sdk_e2e.rs
examples/basic-agent/: Cargo.toml
examples/basic-agent/src/: main.rs
examples/eval-agent/: Cargo.toml
examples/eval-agent/src/: main.rs
examples/mcp-agent/: Cargo.toml
examples/mcp-agent/src/: main.rs
examples/openrouter-agent/: Cargo.toml  README.md
examples/openrouter-agent/src/: main.rs
