[workspace]
members = [
    "crates/*",
    "examples/*",
    "apps/desktop/src-tauri"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/kidoz/trace-weft"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v7", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
clap = { version = "4.5", features = ["derive"] }
# Shared base: no driver/TLS so dependents pull only what they use. The
# recorder adds `sqlite`; the server adds `postgres` + TLS.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio"] }
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "trace"] }
tonic = "0.12"
prost = "0.13"
