[package]
name = "trace-weft-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[[bin]]
name = "trace-weft"
path = "src/main.rs"

[dependencies]
trace-weft-server = { version = "0.3.5", path = "../trace-weft-server" }
tokio.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
