[package]
name = "trace-weft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core IDs, span and event schemas, and redaction traits for TraceWeft"
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait = "0.1"
regex = "1.12.3"
anyhow.workspace = true

[features]
# Deterministic record fixtures for tests in dependent crates.
test-util = []
