[package]
name = "trace-weft-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Instrumentation macros for TraceWeft (agent, tool, llm_call)"
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
