[package]
name = "trace-weft-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Model Context Protocol trace-context propagation for TraceWeft"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
trace-weft-core = { version = "0.3.1", path = "../trace-weft-core" }
trace-weft = { version = "0.3.1", path = "../trace-weft" }
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
