[package]
name = "trace-weft-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Model Context Protocol trace-context propagation for TraceWeft"
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
trace-weft-core = { version = "0.3.4", path = "../trace-weft-core" }
trace-weft = { version = "0.3.4", path = "../trace-weft" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
