[package]
name = "trace-weft-openinference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
trace-weft-core = { version = "0.2.0", path = "../trace-weft-core" }
serde_json.workspace = true
opentelemetry.workspace = true

[dev-dependencies]
trace-weft-core = { version = "0.2.0", path = "../trace-weft-core", features = ["test-util"] }
