[package]
name = "trace-weft-openinference"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OpenInference attribute compatibility for TraceWeft"
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
trace-weft-core = { version = "0.3.5", path = "../trace-weft-core" }
opentelemetry.workspace = true

[dev-dependencies]
trace-weft-core = { version = "0.3.5", path = "../trace-weft-core", features = ["test-util"] }
