[package]
name = "trace-weft-otel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OpenTelemetry export bridge for TraceWeft traces"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
trace-weft-core = { version = "0.2.0", path = "../trace-weft-core" }
tokio.workspace = true
anyhow.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait = "0.1"

[dev-dependencies]
trace-weft-core = { version = "0.2.0", path = "../trace-weft-core", features = ["test-util"] }
opentelemetry_sdk = { workspace = true, features = ["testing"] }
uuid.workspace = true
