[package]
name = "trace-weft-recorder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Local JSONL, SQLite, and blob trace recorder for TraceWeft"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = ["sqlite"]
# SQLite mirror of the JSONL stream. Disable for a pure local-JSONL recorder
# that pulls no `sqlx`.
sqlite = ["dep:sqlx"]

[dependencies]
trace-weft-core = { version = "0.2.0", path = "../trace-weft-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx = { workspace = true, features = ["sqlite", "migrate", "macros"], optional = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
trace-weft-core = { version = "0.2.0", path = "../trace-weft-core", features = ["test-util"] }
