[package]
name = "trace-weft-server"
version.workspace = true
edition.workspace = true

[dependencies]
trace-weft-core = { path = "../trace-weft-core" }
trace-weft = { path = "../trace-weft" }
trace-weft-recorder = { path = "../trace-weft-recorder" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres", "tls-native-tls"] }
async-trait = "0.1"
clickhouse = "0.11"
object_store = { version = "0.10", features = ["aws"] }
bytes = "1.5"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
trace-weft-core = { path = "../trace-weft-core", features = ["test-util"] }
uuid.workspace = true
