[package]
name = "trace-weft-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Axum API and query layer for TraceWeft (SQLite, Postgres, auth, OTLP ingest)"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
trace-weft-core = { version = "0.3.2", path = "../trace-weft-core" }
trace-weft = { version = "0.3.2", path = "../trace-weft" }
trace-weft-recorder = { version = "0.3.2", path = "../trace-weft-recorder" }
trace-weft-ingest = { version = "0.3.2", path = "../trace-weft-ingest" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower-http.workspace = true
sqlx = { workspace = true, features = ["sqlite", "postgres", "tls-native-tls"] }
async-trait = "0.1"
clickhouse = "0.11"
object_store = { version = "0.10", features = ["aws"] }
bytes = "1.5"
sha2 = "0.10"
subtle = "2.6"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
trace-weft-core = { version = "0.3.2", path = "../trace-weft-core", features = ["test-util"] }
uuid.workspace = true
