[package]
name = "trace-weft"
version.workspace = true
edition.workspace = true

[dependencies]
trace-weft-core = { path = "../trace-weft-core" }
trace-weft-recorder = { path = "../trace-weft-recorder" }
trace-weft-macros = { path = "../trace-weft-macros" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
lazy_static = "1.5"
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
