[package]
name = "trace-weft"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust-first, local-first observability and debugging toolkit for LLM agents"
license.workspace = true
repository.workspace = true
keywords = ["observability", "tracing", "llm", "agents", "opentelemetry"]
categories = ["development-tools::debugging"]

[lints]
workspace = true

[features]
default = ["sqlite"]
# Forwarded to the recorder: a SQLite mirror alongside JSONL. Disable for a
# pure local-JSONL SDK that pulls no `sqlx`.
sqlite = ["trace-weft-recorder/sqlite"]

[dependencies]
trace-weft-core = { version = "0.3.1", path = "../trace-weft-core" }
trace-weft-recorder = { version = "0.3.1", path = "../trace-weft-recorder", default-features = false }
trace-weft-macros = { version = "0.3.1", path = "../trace-weft-macros" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
lazy_static = "1.5"
serde.workspace = true
serde_json.workspace = true
async-trait = "0.1"
sha2 = "0.10"
