[package]
name = "eval-agent"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
trace-weft = { path = "../../crates/trace-weft" }
trace-weft-core = { path = "../../crates/trace-weft-core" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde_json.workspace = true
