[package]
name = "eval-agent"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
trace-weft = { version = "0.3.5", path = "../../crates/trace-weft" }
trace-weft-core = { version = "0.3.5", path = "../../crates/trace-weft-core" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde_json.workspace = true
