[package]
name = "mcp-agent"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
trace-weft = { version = "0.2.0", path = "../../crates/trace-weft" }
trace-weft-mcp = { version = "0.2.0", path = "../../crates/trace-weft-mcp" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
