[package]
name = "mcp-agent"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
trace-weft = { version = "0.3.0", path = "../../crates/trace-weft" }
trace-weft-mcp = { version = "0.3.0", path = "../../crates/trace-weft-mcp" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
