[package]
name = "openrouter-agent"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
trace-weft = { version = "0.3.5", path = "../../crates/trace-weft" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
