[package]
name = "trace-weft-desktop"
version = "0.2.0"
description = "TraceWeft Desktop Application"
authors = ["TraceWeft Team"]
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trace-weft-server = { version = "0.2.0", path = "../../../crates/trace-weft-server" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
