[package]
name = "trace-weft-desktop"
version.workspace = true
description = "TraceWeft Desktop Application"
authors = ["TraceWeft Team"]
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
trace-weft-server = { version = "0.3.5", path = "../../../crates/trace-weft-server" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
